# kouluhommat

olio ohjelmointi/laskinqt/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
olio ohjelmointi/notifikator/: CMakeLists.txt  main.cpp
olio ohjelmointi/pankkitili/: CMakeLists.txt  asiakas.cpp  asiakas.h  luottotili.cpp  luottotili.h  main.cpp  pankkitili.cpp  pankkitili.h
olio ohjelmointi/peli2/: CMakeLists.txt  Game.cpp  Game.h  main.cpp
olio ohjelmointi/shakki/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
olio ohjelmointi/testi/: CMakeLists.txt  main.cpp
olio ohjelmointi/thtv3/: CMakeLists.txt  chef.cpp  chef.h  italianchef.cpp  italianchef.h  main.cpp
olio ohjelmointi/viko6/: CMakeLists.txt  main.cpp
tietokannat ja rajapintat/jotaki/: testi1.sql
